[project]
name = "python-ai-agents-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
# Development tools:
# - mypy: static type checking
# - ruff: linting and formatting
dev = ["mypy==1.19.1", "ruff==0.15.5"]

[tool.mypy]
# Import/type resolution
ignore_missing_imports = false

# Inference / output quality
local_partial_types = true
pretty = true
python_version = "3.12"
show_error_codes = true

# Strictness
strict = true
warn_unreachable = true

# Extra opt-in checks
enable_error_code = [
    "deprecated",          # deprecated APIs
    "explicit-override",   # require @override on overrides
    "ignore-without-code", # require specific ignore codes
    "possibly-undefined",  # possibly undefined names
    "redundant-expr",      # redundant boolean/logic expressions
    "truthy-bool",         # suspicious truthiness checks
    "truthy-iterable",     # suspicious iterable truthiness checks
    "unused-awaitable",    # awaitables created but never used/awaited
]

[tool.ruff]
# Python version Ruff should assume.
target-version = "py312"

[tool.ruff.format]
# Format code examples inside docstrings.
docstring-code-format = true

[tool.ruff.lint]
# Rule families to enable.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-native rules
    "A",   # builtin shadowing
    "C4",  # comprehensions
    "DTZ", # datetime/timezone issues
    "ICN", # import conventions
    "PIE", # miscellaneous improvements
    "PT",  # pytest style
    "RET", # return cleanup
    "TC",  # type-checking imports
]

# Report unused imports, but don't auto-delete them on fix.
unfixable = ["F401"]
