[project]
name = "python-ai-agents-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
    "langchain[openai]==1.2.12",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
]

[dependency-groups]
# Development tools:
# - mypy: static type checking
# - ruff: linting and formatting
dev = ["pyright==1.1.408", "ruff==0.15.5"]
